# entity/user.go
@@ -1,9 +1,12 @@
 package entity
 
+import "time"
+
 type User struct {
 	Id int `json:"id"`
-	Username       string `json:"username" binding:"required"`
-	PasswordHashed string `json:"passhash" binding:"required"`
+	Username       string `json:"username"`
+	PasswordHashed string `json:"password_hash,omitempty"`
+	AudioLastUpdated time.Time `json:"audio_last_updated"`
 }
 
 type UserDetails struct {
